--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <div class="">
                 <input type="text" placeholder="Search" id="inputed-value">
                 <button class="btn btn-success " id="search-btn">Search</button>
+                <button class="btn btn-warning " id="clear-btn">clear</button>
+
             </div>
             
         </div>
@@ -51,7 +53,7 @@
 
                    </div>
                    <div id="food-details">
-                     
+
                    </div>
            </div>
        </section>
